fix now entrypoint

--- a/now.json
+++ b/now.json
@@ -4,7 +4,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "src/index.js",
       "use": "@now/node"
     }
   ],
@@ -23,7 +23,7 @@
         "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
       },
       "src": "/(.*)",
-      "dest": "index.js"
+      "dest": "src/index.js"
     }
   ]
 }
