--- a/package.json
+++ b/package.json
@@ -4,19 +4,17 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index.js localhost 8080"
+    "start": "node src/index.js"
   },
   "dependencies": {
     "@google/maps": "0.5.5",
+    "cors": "^2.8.5",
     "express": "4.16.4",
     "got": "9.6.0",
     "mongoose": "5.4.15",
     "node-cron": "2.0.3",
     "util": "0.11.1",
     "xml2js": "0.4.19"
-  },
-  "devDependencies": {
-    "nodemon": "1.18.4"
   },
   "keywords": []
 }
